--- a/src/main/resources/templates/hello.mustache
+++ b/src/main/resources/templates/hello.mustache
@@ -1,18 +1,3 @@
-<!--<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-<head>
-  <title>Hello World!</title>
-</head>
-<body>
-<h1 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h1>
-<form th:action="@{/logout}" method="post">
-  <input type="submit" value="Sign Out"/>
-</form>
-</body>
-</html>-->
-
-
 <!DOCTYPE HTML>
 <html>
 <head>
@@ -21,6 +6,6 @@
 </head>
 <body>
 <div>Hello, user</div>
-<a href="/main">Main page</a>
+<a href="/home">Main page</a>
 </body>
 </html>
